// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image.web renders a snapshot 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

<img
  className="c0"
/>
`;

exports[`Image.web renders a snapshot with \`fit:cover\` 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

<img
  className="c0"
/>
`;

exports[`Image.web renders a snapshot with \`height:100\` 1`] = `
.c0 {
  width: 100%;
  height: 100px;
  object-fit: contain;
}

<img
  className="c0"
/>
`;

exports[`Image.web renders a snapshot with \`size:100\` 1`] = `
.c0 {
  width: 100px;
  height: 100px;
  object-fit: contain;
}

<img
  className="c0"
/>
`;

exports[`Image.web renders a snapshot with \`src\` 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

<img
  className="c0"
  src="https://raw.githubusercontent.com/Fineighbor/ui-kit/master/screenshots/web.png"
/>
`;

exports[`Image.web renders a snapshot with \`width:100\` 1`] = `
.c0 {
  width: 100px;
  height: 100%;
  object-fit: contain;
}

<img
  className="c0"
/>
`;
